--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -15,7 +15,7 @@
     <br>
   <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
   <!-- Brand -->
-  <a class="navbar-brand" href="#">Dashboard</a>
+  <a class="navbar-brand" href="#">Developer Funnel</a>
 
   <!-- Toggler/collapsibe Button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
