--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -14,7 +14,7 @@
     <body>
         <div class="container">
             <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
-                <a class="navbar-brand" href="#">DashBoard</a>
+                <a class="navbar-brand" href="#">Developer Funnel</a>
                 <button class="navbar-toggler" type="button" data-toggle="collpase"
                     data-targert="#collapsibleNavbar">
                     <span class="navbar-toggle-icon"></span>
