--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -29,7 +29,7 @@
         <a class="nav-link" href="/">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/new">Add new</a>
+        <a class="nav-link" href="/new">Add New</a>
       </li>
     </ul>
   </div> 
